# FritzBoxInflux

./: .gitignore  .pre-commit-config.yaml  Dockerfile  FritzBoxInflux.py  LICENSE  README.md  dashboard.json  env-sample  pyproject.toml  requirements.txt  setup.cfg
.github/actions/install-env/: action.yml
.github/workflows/: build-image.yml  code-quality.yaml
FritzBoxInflux.pxd/: metadata.info
FritzBoxInflux.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
docker/: Dockerfile
src/: entrypoint.py  fritzbox_data.py  io.py
static/: dashboard.json
