[tool.poetry]
name = "FritzBoxInflux"
version = "0.2.0"
description = "A simple python app to query a FritzBox through fritzconnection and send the interesting results to InfluxDB."
authors = ["GiantMolecularCloud <26749617+GiantMolecularCloud@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
fritzbox-influx = "src.entrypoint:main"

[tool.poetry.dependencies]
python = "^3.12"
influxdb = "^5.3.2"
fritzconnection = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pydantic-settings = "2.12.0"
autodoc_pydantic = ">=1.8,<3"
black = "^25"
coverage = {extras = ["toml"], version = "^7"}
darglint = "^1.5.8"
flake8 = "^7"
flake8-annotations = "^3"
flake8-black = "^0.3.2"
flake8-bugbear = "^23"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.3.1"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.5.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-isort = "^7"
flake8-mutable = "^1.2.0"
flake8-simplify = "^0.30.0"
flake8-super = "^0.1.3"
isort = "^6.0.1"
mypy = "^1"
pep8-naming = "^0.13.2"
pip-licenses = "^5"
poethepoet = "^0.39"
pre-commit = "^4"
twine = "^6.1.0"
wcwidth = "^0.2.13"
python-dotenv = "^1.0.1"
ipython = "^9.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
files = "src"
allow_redefinition = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["influxdb.*", "fritzconnection.*"]
follow_untyped_imports = true

[tool.poe.tasks]
isort = {cmd = "isort src", help = "Sort imports"}
black = {cmd = "black -l 120 src", help = "Format source code"}
format = {sequence = ["isort", "black"], help = "Format source code & sort imports"}
lint = {cmd = "flake8 --max-cognitive-complexity=15 src", help = "Lint and complexity score for source code"}
mypy = {cmd = "mypy src", help = "Type check code"}
precommit = {sequence = ["format", "lint", "mypy"], help = "Prepare for commit"}
tag = { shell = "git tag -a `poetry version -s` -m v`poetry version -s`", help = "Create git tag for current version" }
